# selfie-adapters

./: .gitignore  LICENSE  README.md  evaluate_labels_retrieval.py  pyproject.toml  requirements.txt  verify_qwen_scaling_setup.sh
data/: README.md
data_prep/: __init__.py  prepare_sae_training_data.py
data_prep/twohopfact_filtering/: __init__.py  filter_dataset.py  llama_inference.py  start_vllm_server.py
data_prep/wikipedia_topics/: __init__.py  extract_multilayer_vectors.py  extract_wikipedia_vectors.py  save_mean_vectors.py
evals/: __init__.py
evals/bridge_entity/: __init__.py  run_modal.py  run_selfie_bridge_extraction.py
evals/embedding_retrieval/: __init__.py  evaluate_labels_retrieval.py  topic_retrieval_eval.py
evals/generation_scoring/: __init__.py  compute_mean_max_hit_rate.py  config.py  evaluation_functions.py  label_generator.py  master_json_loader.py  merge_labels_with_metadata.py  merge_shards.py  reward_system.py  run_eval.py  run_eval_modal.py  run_qwen_scaling_label_gen.sh  sae_core.py
evals/taboo_baseline/: __init__.py  build_embedding_index.py  check_server.py  compare_results.py  qwen_inference.py  run_taboo_eval.py  start_qwen_server.py  taboo_generator.py
examples/: contrastive_topic_vector.py  sae_decoder_vector.py
selfie_adapters/: __init__.py  inference.py  projection.py  sae_utils.py
training/: __init__.py  config.py  data.py  model.py  train.py  train_modal.py  trainer.py  utils.py
training/configs/: identity_baseline.yaml  scalar_affine_8b_goodfire.yaml  scalar_plus_low_rank_8b.yaml
(+26 files in other folders)
