[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "selfie-adapters"
version = "0.1.0"
description = "Lightweight adapters for self-interpretation via activation patching (SelfIE)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.44.0",
    "safetensors>=0.3.0",
    "huggingface-hub>=0.20.0",
    "accelerate>=0.20.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
sae = [
    "sae-lens>=4.0.0",
    "nnsight>=0.4.0,<0.5.0",
]
training = [
    "pyyaml>=6.0",
    "wandb>=0.16.0",
    "datasets>=2.0.0",
]
eval = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "sentence-transformers>=2.0.0",
]
all = [
    "sae-lens>=4.0.0",
    "nnsight>=0.4.0,<0.5.0",
    "pyyaml>=6.0",
    "wandb>=0.16.0",
    "datasets>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "sentence-transformers>=2.0.0",
    "httpx>=0.24.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Repository = "https://github.com/agencyenterprise/selfie-adapters"

[tool.setuptools.packages.find]
include = ["selfie_adapters*"]
